# Cap_with_Arduino

./: pyproject.toml
cap/: arduino_test.py  cap_arduino.py  cap_with_arduino.py  multi_cam_test.py  multipro.py  test.py  thread_try.py
cap/config/: config.yml
cap/receiver/: receiver.ino
sample_send/: sample_send.ino
